
- wxGraphicsRenderer::CreatePen() now takes wxGraphicsPenInfo and not a wxPen.
  This only affects code defining its own custom renderers, code just using
  wxGraphicsContext::CreatePen() continues to compile and work as before.

- wx/treebook.h doesn't include wx/treectrl.h (and, via it, wx/textctrl.h) any
  more, include these headers explicitly from your code if necessary.


3.1.2: (released 2018-??-??)
----------------------------

All:

- Add wxLZMA{Input,Output}Stream classes using external liblzma.
- Make wxList and wxVector iterators conform to input iterator requirements.
- Fix MT-safety problem when reading and writing from wxSocket (jkubalik).

All (GUI):

- Improve stock items consistency and aesthetics (dhowland).
- Fix bug with missing items in overflowing AUI toolbar (Maarten Bent).
- Revert to left-aligning wxSpinCtrl contents by default.

wxGTK:

- Fix the build with glib < 2.32 (e.g. CentOS 6).

wxMSW:

- Fix hang after clearing wxTAB_TRAVERSAL style on a window with children.
- Fix handling of AUX2 mouse button events (Trylz).
- Fix saving/restoring window position for maximized windows.
- Fix stack corruption when using wxStackWalker (srfisk).
- Fix positioning windows at positions >= SHORT_MAX (Cătălin Răceanu).
- Honour alignment flags for multiline buttons using custom colours too.

wxOSX:

- Fix dispatching pending events (and CallAfter()) in console applications.


3.1.1: (released 2018-02-19)
----------------------------

INCOMPATIBLE CHANGES SINCE 3.1.0:

- wxListCtrl::HasCheckboxes() and EnableCheckboxes(), which were added in
  3.1.0, have been renamed to HasCheckBoxes and EnableCheckBoxes respectively
  for consistency with wxCheckBox naming.

- The enum value wxTASKBAR_JUMP_LIST_DESTIONATION, which was added in 3.1.0,
  contains a typo and has been renamed to wxTASKBAR_JUMP_LIST_DESTINATION.
  
- wxZipOutputStream will now automatically convert filenames to UTF-8, if the