@@ -62,30 +62,19 @@ public:
                           const wxString& normal_face = wxEmptyString,
                           const wxString& fixed_face = wxEmptyString);
 
+    // Finds the next page break after the specified (vertical) position.
+    // Returns wxNOT_FOUND if passed in position is the last page break.
+    int FindNextPageBreak(const wxArrayInt& known_pagebreaks, int pos);
+
     // [x,y] is position of upper-left corner of printing rectangle (see SetSize)
     // from is y-coordinate of the very first visible cell
     // to is y-coordinate of the next following page break, if any
-    // Returned value is y coordinate of first cell than didn't fit onto page.
-    // Use this value as 'from' in next call to Render in order to print multiple pages
-    // document
-    // If dont_render is TRUE then nothing is rendered into DC and it only counts
-    // pixels and return y coord of the next page
-    //
-    // known_pagebreaks and number_of_pages are used only when counting pages;
-    // otherwise, their default values should be used. Their purpose is to
-    // support pagebreaks using a subset of CSS2's <DIV>. The <DIV> handler
-    // needs to know what pagebreaks have already been set so that it doesn't
-    // set the same pagebreak twice.
-    //
-    // CAUTION! Render() changes DC's user scale and does NOT restore it!
-    int Render(int x, int y, const wxArrayInt& known_pagebreaks, int from = 0,
-               int dont_render = false, int to = INT_MAX);
+    void Render(int x, int y, int from = 0, int to = INT_MAX);
 
     // returns total width of the html document
     int GetTotalWidth() const;
 
     // returns total height of the html document
-    // (compare Render's return value with this)
     int GetTotalHeight() const;
 
 private:
